# kinova-ros

./: .clang-format  .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/kinova_arm_moveit_demo/: motion_plan  pick_place  test_accuracy  work_scene
devel/lib/kinova_driver/: gripper_command_action_server  joint_trajectory_action_server  kinova_arm_driver  kinova_interactive_control  kinova_tf_updater
devel/lib/kinova_serial/: serialListener  tcpListener
devel/lib/pkgconfig/: j2n6s300_ikfast.pc  j2n6s300_moveit_config.pc  j2s6s300_ikfast.pc  j2s6s300_moveit_config.pc  j2s7s300_ikfast.pc  j2s7s300_moveit_config.pc  kinova_arm_moveit_demo.pc  kinova_bringup.pc  kinova_control.pc  kinova_demo.pc  kinova_description.pc  kinova_driver.pc  kinova_gazebo.pc  kinova_msgs.pc  kinova_serial.pc  m1n6s300_ikfast.pc  m1n6s300_moveit_config.pc
include/: WheelchairInfo.h
include/common/: MathConstExpr.h  RosLogEntry.h  RosLogger.h  Singleton.h  SpinLock.h  ThreadTimer.h  TimeUtil.h
src/kinova_bringup/launch/: kinova_robot.launch
src/kinova_control/config/: j2s7s300_control.yaml
src/kinova_demo/: CMakeLists.txt
src/kinova_demo/src/: door_open.cpp  move_in_circle.cpp  right_door_open.cpp  right_door_start.cpp
src/kinova_description/launch/: display_kinova_robot.launch
src/kinova_description/meshes/: collision.STL  collision.STL.dae
src/kinova_description/urdf/: j2s7s300_chair.xacro  j2s7s300_pos.xacro  j2s7s300_with_chair.xacro  kinova_common.xacro  wmrm.xacro
src/kinova_driver/src/: kinova_api.cpp  kinova_arm.cpp
src/kinova_gazebo/launch/: display.launch  robot_chair_launch.launch  wmrm_display.launch  wmrm_launch.launch
src/kinova_gazebo/worlds/: indoors.world  test.world
src/kinova_serial/: CMakeLists.txt
src/kinova_serial/src/: serialListener.cpp  tcpListener.cpp
src/mm_map_creator/: CMakeLists.txt  README.md  package.xml
src/mm_map_creator/config/: default_values.yaml  joint_names.yaml  joint_value_limits.yaml
src/mm_map_creator/include/mm_map_creator/: head_file.h  mm_base_placement.cpp  mm_base_placement.h  mm_collision_check.cpp  mm_collision_check.h  mm_discretization.cpp  mm_discretization.h  mm_display.cpp  mm_display.h  mm_inverse_kinematics.cpp  mm_inverse_kinematics.h  mm_kinematics.cpp  mm_kinematics.h  mm_motion_planner.cpp  mm_motion_planner.h  mm_sampling.cpp  mm_sampling.h
src/mm_map_creator/launch/: hcm_generator.launch  merge.launch  orm_display.launch  start.launch
src/mm_map_creator/src/: mm_create_irm.cpp  mm_create_reachability_map.cpp  mm_create_rm.cpp  mm_display_node.cpp  mm_down_sampling.cpp  mm_down_spl.cpp  mm_irm_display.cpp  mm_rm_display.cpp  orm_display.cpp  orm_server.cpp
src/mm_map_creator/srv/: orm_calculation.srv
src/mm_moveit_config/: .setup_assistant  package.xml
src/mm_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  mobile_manipulator.srdf  ompl_planning.yaml  ros_controllers.yaml
src/mm_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch
src/robot_model/: readme.md
src/robot_model/mm_rviz_sim/: CMakeLists.txt  package.xml  readme.md  urdf.rviz
src/robot_model/modified_tf/: CMakeLists.txt  (+2 more)
(+118 files in other folders)
